--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
