--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googleapis/drive": "^8.14.0",
     "@next/env": "^15.0.2",
     "@radix-ui/react-icons": "^1.3.0",
     "dotenv": "^16.4.5",
-    "next": "14.2.14",
+    "next": "^14.2.23",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
