--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@googleapis/drive": "^8.14.0",
     "@next/env": "^15.0.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/blob": "^0.27.1",
     "dotenv": "^16.4.5",
     "next": "^14.2.23",
     "nodemailer": "^6.9.16",
