--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@next/env": "^15.0.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@vercel/blob": "^0.27.1",
     "dotenv": "^16.4.5",
-    "next": "^14.2.23",
+    "next": "^15.3.0",
     "nodemailer": "^6.9.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,7 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
