--- a/package.json
+++ b/package.json
@@ -6,21 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14"
+    "@radix-ui/react-icons": "^1.3.2",
+    "@vercel/blob": "^1.1.1",
+    "dotenv": "^16.5.0",
+    "next": "^15.3.3",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/supertest": "^6.0.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "jest": "^29.7.0",
+    "postcss": "^8",
+    "supertest": "^7.1.3",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5"
   }
 }
