--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
@@ -27,6 +29,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/supertest": "^6.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
