--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@vercel/blob": "^1.1.1",
-    "dotenv": "^16.5.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
@@ -30,12 +29,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
-    "@types/supertest": "^6.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "supertest": "^7.1.3",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.4.0",
     "typescript": "^5"
