--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,11 +2,7 @@ name: ESLint
 
 on:
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   lint:
@@ -14,12 +10,13 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '16'
+        node-version: '20'
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm ci
