--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@vercel/blob": "^1.1.1",
-    "next": "^15.3.3",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.11",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
@@ -29,8 +29,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.7",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
