Update github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-name: Jest Tests
+name: CI
 
 on:
   push:
   pull_request:
 
 jobs:
-  test:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+
+    - name: Run ESLint
+      run: npx eslint .
 
     - name: Run Jest
       run: npm test
